# geoparquet-io

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CLEANUP_PLAN.md  PHASE1_CODEBASE_REVIEW.md  PHASE2_DECISION_POINTS.md  PHASE2_EXECUTIVE_SUMMARY.md  PLAN_PR2.md  PROGRESS.md  README.md  REMOTE_FILES_FINDINGS.md  REMOTE_FILES_IMPLEMENTATION.md  REMOTE_FILES_QUICK_REFERENCE.md  STATUS.md  SUMMARY.md  add_country_codes.py  complete_overwrite_updates.md  mkdocs.yml  perf_test.py  pyproject.toml  test_partition_format.py
.claude/hooks/: ensure-uv-run.py  pre-session-hook.md
.githooks/: README.md  commit-msg  post-checkout  pre-push
.github/scripts/: smoke_test.py
.github/workflows/: benchmark.yml  docs.yml  publish.yml  pyarrow-compat.yml  release-benchmark.yml  tests.yml
context/: README.md
context/plan/: issue-191-overwrite-standardization.md
docs/: CHANGELOG.md  contributing.md  index.md
docs/api/: core.md  python-api.md
docs/cli/: benchmark.md  convert.md  extract.md  overview.md  select.md  stac.md  upload.md  validate.md
docs/concepts/: best-practices.md
docs/getting-started/: installation.md  quickstart.md
docs/guide/: add.md  benchmarks.md  cache.md  check.md  convert.md  extract.md  geojson.md  inspect.md  meta.md  partition.md  piping.md  remote-files.md  select.md  sort.md  stac.md  streaming-write.md  upload.md  validate.md  write-strategies.md
docs/plans/: 2026-01-18-lazy-execution-design.md  2026-01-24-streaming-duckdb-write-design.md  2026-01-24-streaming-duckdb-write.md  2026-01-26-benchmark-suite-design.md  2026-01-26-benchmark-suite-impl.md
docs/research/: streaming-execution-research.md
geoparquet_io/: __init__.py
geoparquet_io/api/: __init__.py  lazy.py  ops.py  raster.py  stac.py  table.py
geoparquet_io/benchmarks/: Dockerfile  __init__.py  config.py  operations.py
geoparquet_io/cli/: decorators.py  fix_helpers.py  main.py
geoparquet_io/core/: add_admin_divisions_multi.py  add_bbox_column.py  add_bbox_metadata.py  add_country_codes.py  add_h3_column.py  add_kdtree_column.py  add_quadkey_column.py  admin_cache.py  admin_datasets.py  arcgis.py  benchmark.py  benchmark_report.py  benchmark_suite.py  check_fixes.py  check_parquet_structure.py  check_spatial_order.py  common.py  constants.py  convert.py  duckdb_metadata.py  extract.py  extract_bigquery.py  format_writers.py  geojson_stream.py  geoparquet_version.py  hilbert_order.py  inspect.py  inspect_utils.py  logging_config.py  metadata_utils.py  partition_admin_hierarchical.py  partition_by_h3.py  partition_by_kdtree.py  partition_by_quadkey.py  partition_by_string.py  partition_common.py  partition_ops.py  partition_reader.py  raquet.py  (+11 more)
geoparquet_tools/: __init__.py
plans/: 2026-01-18-lazy-execution-design.md  feat-consolidate-write-strategies.md
plugins/gpio-pmtiles/: README.md  pyproject.toml
plugins/gpio-pmtiles/gpio_pmtiles/: __init__.py  cli.py  core.py
plugins/gpio-pmtiles/tests/: conftest.py  test_pmtiles.py
scripts/: create_benchmark_data.py  version_benchmark.py
tests/: conftest.py  test_add.py  test_add_h3.py  test_add_overwrite.py  test_add_quadkey.py  test_admin_datasets.py  test_api.py  test_arcgis.py  test_benchmark.py  test_benchmark_piping.py  test_benchmark_suite.py  test_bounds.py  test_check.py  test_check_fixes_core.py  test_check_fixes_helpers.py  test_check_parquet_structure.py  test_common_utils.py  test_convert.py  test_country_code.py  test_crs_conversion.py  test_crs_write_paths.py  test_decorators.py  test_dry_run.py  test_duckdb_metadata.py  test_extract.py  test_extract_bigquery.py  test_extract_overwrite.py  test_fix_helpers.py  test_format.py  test_format_writers.py  test_geojson_stream.py  test_geoparquet_versions.py  test_glob_errors.py  test_hive_partition.py  test_inspect.py  test_kdtree.py  test_lazy.py  test_logging_config.py  test_meta.py  test_output_format.py  (+19 more)
(+49 files in other folders)
