[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "geoparquet-tools"
version = "0.1.0"
description = "A collection of tools for working with GeoParquet files"
readme = "README.md"
requires-python = ">=3.8"
license = "Apache-2.0"
authors = [
    { name = "Chris Holmes", email = "cholmes@9eo.org" }
]
keywords = ["geoparquet", "geospatial", "parquet", "gis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
    "click>=8.0.0",
    "pyarrow>=12.0.0",
    "duckdb>=1.1.3",
    "pandas>=1.0.0",
    "fsspec>=2023.9.0"
]

[project.scripts]
gt = "geoparquet_tools:cli"

[project.urls]
"Homepage" = "https://github.com/cholmes/geoparquet-tools"
"Bug Tracker" = "https://github.com/cholmes/geoparquet-tools/issues"

[tool.hatch.build.targets.wheel]
packages = ["geoparquet_tools"] 