[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gpio-pmtiles"
version = "0.1.0"
description = "PMTiles generation plugin for geoparquet-io"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
    { name = "Chris Holmes", email = "cholmes@9eo.org" }
]
keywords = ["geoparquet", "pmtiles", "vector-tiles", "tippecanoe"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
    "geoparquet-io>=0.8.0",
    "click>=8.0.0",
]

[project.entry-points."gpio.plugins"]
pmtiles = "gpio_pmtiles.cli:pmtiles"

[project.urls]
"Homepage" = "https://github.com/geoparquet/geoparquet-io"
"Bug Tracker" = "https://github.com/geoparquet/geoparquet-io/issues"
"Documentation" = "https://geoparquet.io/"
"Source" = "https://github.com/geoparquet/geoparquet-io"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["gpio_pmtiles"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.isort]
known-first-party = ["gpio_pmtiles"]
